@@ -245,7 +245,10 @@ CONTAINS
             CALL mp_bcast( lstat,                    ionode_id)
             !
             ierr = 0
-            IF ( .NOT. lstat ) ierr = 10
+            IF ( .NOT. lstat ) THEN 
+                ierr = 10
+                CALL etsf_error(error_data,subname,'reading ETSF data',ierr)
+            ENDIF
             !
             !
             nfft(1) = dims%number_of_grid_points_vector1
